--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/"
+    "url": "git+https://github.com/benisadewa/abogobog"
   },
   "keywords": [
     "k"
@@ -42,7 +42,7 @@
   "author": "Abdul Muttaqin",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/issues"
+    "url": "https://github.com/benisadewa/abogobog/issues"
   },
-  "homepage": "https://github.com/#readme"
+  "homepage": "https://github.com/benisadewa/abogobog#readme"
 }
